--- a/src/components/button/button.style.css
+++ b/src/components/button/button.style.css
@@ -3,6 +3,7 @@ button
   outline: none;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 
 button.icon
@@ -18,6 +19,6 @@ button.icon
 
   &:hover
   {
-    background-color: #0003;
+    background-color: #fff2;
   }
 }
