--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,8 @@ div#root main
 }
 
 div#root main hr { color: white; }
+
+@media screen and (min-width: 1000px)
+{
+  div#root{ max-width: 700px; margin: auto; }
+}
